--- a/Oxford Brookes Bus/Base.lproj/Main.storyboard
+++ b/Oxford Brookes Bus/Base.lproj/Main.storyboard
@@ -167,59 +167,71 @@
                                     <constraint firstAttribute="height" constant="540" id="rac-aS-tD6"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="146" id="MCL-Cy-W8e" customClass="CustomRouteViewCell" customModule="Oxford_Brookes_Bus" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="146" id="MCL-Cy-W8e" customClass="CustomRouteViewCell" customModule="Oxford_Brookes_Bus" customModuleProvider="target">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MCL-Cy-W8e" id="vSn-sU-fXR">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e15-ad-RDl">
-                                                    <rect key="frame" x="18" y="8" width="316" height="21"/>
-                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="cqf-O2-kBI"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Next Bus:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fwC-3i-YMR">
-                                                    <rect key="frame" x="18" y="31" width="76" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AYT-Jd-dSu">
+                                                    <rect key="frame" x="320" y="20" width="42" height="42"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="ArrowPathBegin.png" translatesAutoresizingMaskIntoConstraints="NO" id="YC6-N0-ITM">
-                                                    <rect key="frame" x="225" y="-7" width="182" height="182"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="182" id="DUv-ex-rCo"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJ9-uk-L7x">
-                                                    <rect key="frame" x="18" y="60" width="240" height="80"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="80" id="7xP-Gp-T8M"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rVW-pk-reG" customClass="WobbleView" customModule="WobbleView">
+                                                    <rect key="frame" x="0.0" y="0.0" width="382" height="145"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="ArrowPathBegin.png" translatesAutoresizingMaskIntoConstraints="NO" id="YC6-N0-ITM">
+                                                            <rect key="frame" x="-30" y="0.0" width="182" height="137"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="182" id="DUv-ex-rCo"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Next Bus:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fwC-3i-YMR">
+                                                            <rect key="frame" x="160" y="26" width="76" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e15-ad-RDl">
+                                                            <rect key="frame" x="160" y="0.0" width="189" height="21"/>
+                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="cqf-O2-kBI"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJ9-uk-L7x">
+                                                            <rect key="frame" x="160" y="50" width="240" height="80"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="80" id="7xP-Gp-T8M"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
                                             </subviews>
+                                            <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstItem="e15-ad-RDl" firstAttribute="leading" secondItem="fwC-3i-YMR" secondAttribute="leading" id="1BD-61-z76"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="e15-ad-RDl" secondAttribute="trailing" constant="7" id="NLX-Xo-WNb"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="YC6-N0-ITM" secondAttribute="trailing" constant="-66" id="PnM-fR-NzM"/>
-                                                <constraint firstItem="fwC-3i-YMR" firstAttribute="top" secondItem="e15-ad-RDl" secondAttribute="bottom" constant="2" id="WmR-yM-Svr"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="YC6-N0-ITM" secondAttribute="bottom" constant="-38" id="fKL-Dt-q4h"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="QJ9-uk-L7x" secondAttribute="trailing" constant="83" id="qj4-wI-DkN"/>
-                                                <constraint firstItem="e15-ad-RDl" firstAttribute="leading" secondItem="vSn-sU-fXR" secondAttribute="leadingMargin" constant="10" id="rZC-JQ-j8X"/>
-                                                <constraint firstItem="e15-ad-RDl" firstAttribute="leading" secondItem="QJ9-uk-L7x" secondAttribute="leading" id="seh-gA-H2c"/>
-                                                <constraint firstItem="QJ9-uk-L7x" firstAttribute="top" secondItem="fwC-3i-YMR" secondAttribute="bottom" constant="8" symbolic="YES" id="ynJ-4T-yhs"/>
+                                                <constraint firstItem="rVW-pk-reG" firstAttribute="leading" secondItem="vSn-sU-fXR" secondAttribute="leading" id="I8S-sA-vFf"/>
+                                                <constraint firstAttribute="trailing" secondItem="rVW-pk-reG" secondAttribute="trailing" id="aa8-hO-oPM"/>
+                                                <constraint firstItem="rVW-pk-reG" firstAttribute="top" secondItem="vSn-sU-fXR" secondAttribute="top" id="uqu-DZ-9gm"/>
+                                                <constraint firstAttribute="bottom" secondItem="rVW-pk-reG" secondAttribute="bottom" id="zlE-wN-toH"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="downImage" destination="YC6-N0-ITM" id="kDP-NZ-lXx"/>
                                             <outlet property="downTime" destination="QJ9-uk-L7x" id="cge-au-VfT"/>
+                                            <outlet property="leadingSpaceConstraint" destination="I8S-sA-vFf" id="FCh-W1-1PS"/>
                                             <outlet property="locationTitle" destination="e15-ad-RDl" id="a1U-nt-FL4"/>
+                                            <outlet property="panView" destination="rVW-pk-reG" id="bbb-eb-nyS"/>
+                                            <outlet property="timerLabel" destination="AYT-Jd-dSu" id="ida-DA-z2U"/>
+                                            <outlet property="trailingSpaceConstraint" destination="aa8-hO-oPM" id="w01-Vt-7zH"/>
                                             <segue destination="iAU-O2-yiV" kind="show" identifier="routeToTime" id="rgY-Ka-EJh"/>
                                         </connections>
                                     </tableViewCell>
